# SingletonActionLayerDriver

./: .gitignore  Cargo.toml  README.md
.github/workflows/: ci.yml  release.yml
apps/singlelaunch/: Cargo.toml
apps/singlelaunch/src/: driver.rs  main.rs
crates/action-layer-driver/: Cargo.toml
crates/action-layer-driver/src/: action_layer.rs  error.rs  lib.rs  singleton.rs
crates/wallet/: Cargo.toml
crates/wallet/src/: address.rs  error.rs  keys.rs  storage.rs  transaction.rs
examples/singlelaunch/src/: driver.rs  main.rs
examples/wallet/: Cargo.toml
examples/wallet/src/: address.rs  keys.rs  lib.rs  manager.rs  storage.rs  transaction.rs
puzzles/: README.md  Rue.toml
puzzles/output/: action.clvm.hex  child_inner_puzzle.clvm.hex  child_inner_puzzle_2.clvm.hex  emit_child_action.clvm.hex  emitter_action.clvm.hex  emitter_inner_puzzle.clvm.hex  finalizer.clvm.hex  p2_delegated_by_singleton.clvm.hex  simple_action.clvm.hex  slot.clvm.hex  test_action.clvm.hex
puzzles/src/: action.rue  child_inner_puzzle.rue  child_inner_puzzle_2.rue  constants.rue  emit_child_action.rue  emitter_action.rue  emitter_inner_puzzle.rue  finalizer.rue  p2_delegated_by_singleton.rue  simple_action.rue  slot.rue  test_action.rue
puzzles/src/singleton/: action.clsp  p2_delegated_by_singleton.clsp  slot.clsp
src/: action_layer.rs  error.rs  lib.rs  puzzle.rs
src/singleton/: driver.rs  helpers.rs  mod.rs  spend_options.rs  types.rs
