[workspace]
members = [
    "crates/wallet",
    "apps/singlelaunch",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.75.0"
license = "MIT"
authors = ["DIG Network"]

[workspace.dependencies]
# Chia SDK - using 0.26/0.30 for datalayer-driver 3.0.0 compatibility
chia = "0.26"
chia-wallet-sdk = { version = "0.30", features = ["action-layer"] }
chia-sdk-test = "0.30"

# Chia types and crypto (0.26 for datalayer-driver compatibility)
chia-bls = "0.26"
chia-protocol = "0.26"
chia-puzzle-types = "0.26"

# CLVM and puzzles (matching datalayer-driver deps)
clvmr = "0.14"
clvm-traits = "0.26"
clvm-utils = "0.26"
chia-puzzles = "0.20"

# Crypto and encoding
hex = "0.4"
hex-literal = "0.4"
sha2 = "0.10"
rand = "0.8"
bech32 = "0.11"
bip39 = "2.0"

# CLI framework
clap = { version = "4.4", features = ["derive", "env"] }

# Interactive prompts
dialoguer = "0.11"
console = "0.15"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"

# Async runtime
tokio = { version = "1", features = ["full"] }

# Directories
dirs = "5.0"

# Error handling
thiserror = "2"
anyhow = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Peer connections
datalayer-driver = "3"
