[package]
name = "action-layer-driver"
version = "0.1.1"
edition = "2021"
rust-version = "1.90.0"
description = "Generic driver for Action Layer (CHIP-0050) singleton spend construction on Chia"
license = "MIT"
authors = ["DIG Network"]
repository = "https://github.com/dig-network/action-layer-driver"
keywords = ["chia", "blockchain", "singleton", "action-layer", "CHIP-0050"]
categories = ["cryptography::cryptocurrencies"]

[lib]
path = "src/lib.rs"

[dependencies]
# Chia SDK
chia = "0.26"
chia-wallet-sdk = { version = "0.30", features = ["action-layer"] }
chia-puzzles = "0.20"
chia-protocol = "0.26"

# CLVM
clvm-traits = "0.26"
clvm-utils = "0.26"
clvmr = "0.14"

# Encoding
hex = "0.4"
hex-literal = "0.4"

# Error handling
thiserror = "2"

[dev-dependencies]
tokio = { version = "1", features = ["full"] }
anyhow = "1.0"

[workspace]
members = [
    "examples/singlelaunch",
    "examples/wallet",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.75.0"
license = "MIT"
authors = ["DIG Network"]

[workspace.dependencies]
# Re-export main crate for examples
action-layer-driver = { path = "." }

# Chia SDK
chia = "0.26"
chia-wallet-sdk = { version = "0.30", features = ["action-layer"] }
chia-sdk-test = "0.30"
chia-puzzles = "0.20"
chia-bls = "0.26"
chia-protocol = "0.26"
chia-puzzle-types = "0.26"

# CLVM
clvmr = "0.14"
clvm-traits = "0.26"
clvm-utils = "0.26"

# Crypto and encoding
hex = "0.4"
hex-literal = "0.4"
sha2 = "0.10"
rand = "0.8"
bech32 = "0.11"
bip39 = "2.0"

# CLI framework
clap = { version = "4.4", features = ["derive", "env"] }

# Interactive prompts
dialoguer = "0.11"
console = "0.15"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"

# Async runtime
tokio = { version = "1", features = ["full"] }

# Directories
dirs = "5.0"

# Error handling
thiserror = "2"
anyhow = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Peer connections
datalayer-driver = "3"
