[package]
name = "singlelaunch"
version.workspace = true
edition.workspace = true
description = "Simple singleton launcher - creates a singleton that spawns children when spent"
authors.workspace = true
license.workspace = true

[[bin]]
name = "singlelaunch"
path = "src/main.rs"

[dependencies]
# CLI framework
clap = { workspace = true }

# Interactive prompts
dialoguer = { workspace = true }
console = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }

# Async runtime
tokio = { workspace = true }

# Chia SDK - main library for wallet operations
chia = { workspace = true }
chia-wallet-sdk = { workspace = true }
chia-sdk-test = { workspace = true }
chia-puzzles = { workspace = true }

# Chia types and crypto (using 0.26 for compatibility with datalayer-driver)
chia-bls = { workspace = true }
chia-protocol = { workspace = true }

# CLVM traits for custom ToClvm implementations
clvm-traits = { workspace = true }
clvm-utils = { workspace = true }
clvmr = { workspace = true }

# Encoding
hex = { workspace = true }
hex-literal = { workspace = true }
sha2 = { workspace = true }
rand = { workspace = true }
bech32 = { workspace = true }
bip39 = { workspace = true }

# Directories
dirs = { workspace = true }

# Error handling
thiserror = { workspace = true }
anyhow = { workspace = true }

# Logging
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

# Peer connections
datalayer-driver = { workspace = true }
