[package]
name = "action-layer-driver"
version.workspace = true
edition.workspace = true
description = "Generic driver for Action Layer (CHIP-0050) spend construction"
authors.workspace = true
license.workspace = true

[dependencies]
# Chia SDK
chia = { workspace = true }
chia-wallet-sdk = { workspace = true }
chia-puzzles = { workspace = true }
chia-protocol = { workspace = true }

# CLVM
clvm-traits = { workspace = true }
clvm-utils = { workspace = true }
clvmr = { workspace = true }

# Encoding
hex = { workspace = true }
hex-literal = { workspace = true }

# Error handling
thiserror = { workspace = true }
